--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,11 @@
   "dependencies": {
     "angular": "1.5.2",
     "bootstrap": "3.3.6",
-    "angular-material": "1.0.6"
+    "angular-material": "1.0.6",
+    "angular-route": "1.5.3",
+    "grunt": "0.4.5"
+  },
+  "resolutions": {
+    "angular": "^1.4.8"
   }
 }
